# doc-assist

./: .gitignore  pyproject.toml
doc_assist/: internetdata.py  query_file.py  reader.py  settings.py  vetorizador.py
